--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#f21111"
-backgroundColor="#0e1117"
-secondaryBackgroundColor="#31333F"
+primaryColor="#EAEAEA"
+backgroundColor="#BBBBBB"
+secondaryBackgroundColor="#F2F1F0"
 #textColor="#fafafa"
 #font="sans serif"
