--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#EAEAEA"
 backgroundColor="#BBBBBB"
-secondaryBackgroundColor="#F2F1F0"
+secondaryBackgroundColor="#A73935"
 #textColor="#fafafa"
 #font="sans serif"
