config.toml updated

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#EAEAEA"
-backgroundColor="#BBBBBB"
-secondaryBackgroundColor="#A73935"
+backgroundColor="#A73935"
+secondaryBackgroundColor="#BBBBBB"
 #textColor="#fafafa"
 #font="sans serif"
