--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#EAEAEA"
+primaryColor="#FDF6DB"
 backgroundColor="#EFEFE2"
-secondaryBackgroundColor="#BBBBBB"
+secondaryBackgroundColor="#FDFFF9"
 #textColor="#fafafa"
 #font="sans serif"
