config.toml updated

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#FDF6DB"
+primaryColor="#F4EDE2"
 backgroundColor="#EFEFE2"
 secondaryBackgroundColor="#FDFFF9"
 #textColor="#fafafa"
